// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Web renders compact above breakpoint 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={21}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={1}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <View
          style={
            Array [
              69,
              67,
            ]
          }
        >
          <View />
          <View>
            <TextLink
              onPress={[Function]}
              style={66}
              url="./2"
            >
              Next page &gt;
            </TextLink>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": 68,
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View />,
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>
            </View>,
          ],
          "style": Array [
            69,
            67,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": "Next page >",
                "onPress": [Function],
                "style": 66,
                "url": "./2",
              },
              "ref": null,
              "rendered": "Next page >",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <View
            style={
              Array [
                69,
                67,
              ]
            }
          >
            <View />
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": 68,
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View />,
              <View>
                <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  Next page &gt;
                </TextLink>
              </View>,
            ],
            "style": Array [
              69,
              67,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  Next page &gt;
                </TextLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": "Next page >",
                  "onPress": [Function],
                  "style": 66,
                  "url": "./2",
                },
                "ref": null,
                "rendered": "Next page >",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Web renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={21}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={1}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              69,
              71,
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 1 - 20 of 21 results
          </Text>
        </View>,
        <View
          style={
            Array [
              69,
              67,
            ]
          }
        >
          <View />
          <View>
            <TextLink
              onPress={[Function]}
              style={66}
              url="./2"
            >
              Next page &gt;
            </TextLink>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": 68,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 1 - 20 of 21 results
          </Text>,
          "style": Array [
            69,
            71,
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "Showing 1 - 20 of 21 results",
            "style": Array [
              70,
            ],
          },
          "ref": null,
          "rendered": "Showing 1 - 20 of 21 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View />,
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>
            </View>,
          ],
          "style": Array [
            69,
            67,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": "Next page >",
                "onPress": [Function],
                "style": 66,
                "url": "./2",
              },
              "ref": null,
              "rendered": "Next page >",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                69,
                71,
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 1 - 20 of 21 results
            </Text>
          </View>,
          <View
            style={
              Array [
                69,
                67,
              ]
            }
          >
            <View />
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": 68,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 1 - 20 of 21 results
            </Text>,
            "style": Array [
              69,
              71,
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Showing 1 - 20 of 21 results",
              "style": Array [
                70,
              ],
            },
            "ref": null,
            "rendered": "Showing 1 - 20 of 21 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View />,
              <View>
                <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  Next page &gt;
                </TextLink>
              </View>,
            ],
            "style": Array [
              69,
              67,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  Next page &gt;
                </TextLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": "Next page >",
                  "onPress": [Function],
                  "style": 66,
                  "url": "./2",
                },
                "ref": null,
                "rendered": "Next page >",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Web renders prev and next link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={41}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={2}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              69,
              71,
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 21 - 40 of 41 results
          </Text>
        </View>,
        <View
          style={
            Array [
              69,
              67,
            ]
          }
        >
          <View>
            <TextLink
              onPress={[Function]}
              style={66}
              url="./1"
            >
              &lt; Previous page
            </TextLink>
          </View>
          <View>
            <TextLink
              onPress={[Function]}
              style={66}
              url="./3"
            >
              Next page &gt;
            </TextLink>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": 68,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 21 - 40 of 41 results
          </Text>,
          "style": Array [
            69,
            71,
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "Showing 21 - 40 of 41 results",
            "style": Array [
              70,
            ],
          },
          "ref": null,
          "rendered": "Showing 21 - 40 of 41 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./1"
              >
                &lt; Previous page
              </TextLink>
            </View>,
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./3"
              >
                Next page &gt;
              </TextLink>
            </View>,
          ],
          "style": Array [
            69,
            67,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <TextLink
                onPress={[Function]}
                style={66}
                url="./1"
              >
                &lt; Previous page
              </TextLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": "< Previous page",
                "onPress": [Function],
                "style": 66,
                "url": "./1",
              },
              "ref": null,
              "rendered": "< Previous page",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <TextLink
                onPress={[Function]}
                style={66}
                url="./3"
              >
                Next page &gt;
              </TextLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": "Next page >",
                "onPress": [Function],
                "style": 66,
                "url": "./3",
              },
              "ref": null,
              "rendered": "Next page >",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                69,
                71,
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 21 - 40 of 41 results
            </Text>
          </View>,
          <View
            style={
              Array [
                69,
                67,
              ]
            }
          >
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./1"
              >
                &lt; Previous page
              </TextLink>
            </View>
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./3"
              >
                Next page &gt;
              </TextLink>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": 68,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 21 - 40 of 41 results
            </Text>,
            "style": Array [
              69,
              71,
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Showing 21 - 40 of 41 results",
              "style": Array [
                70,
              ],
            },
            "ref": null,
            "rendered": "Showing 21 - 40 of 41 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View>
                <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./1"
                >
                  &lt; Previous page
                </TextLink>
              </View>,
              <View>
                <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./3"
                >
                  Next page &gt;
                </TextLink>
              </View>,
            ],
            "style": Array [
              69,
              67,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./1"
                >
                  &lt; Previous page
                </TextLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": "< Previous page",
                  "onPress": [Function],
                  "style": 66,
                  "url": "./1",
                },
                "ref": null,
                "rendered": "< Previous page",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./3"
                >
                  Next page &gt;
                </TextLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": "Next page >",
                  "onPress": [Function],
                  "style": 66,
                  "url": "./3",
                },
                "ref": null,
                "rendered": "Next page >",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Web renders prev link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={41}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={3}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              69,
              71,
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 41 - 41 of 41 results
          </Text>
        </View>,
        <View
          style={
            Array [
              69,
              67,
            ]
          }
        >
          <View>
            <TextLink
              onPress={[Function]}
              style={66}
              url="./2"
            >
              &lt; Previous page
            </TextLink>
          </View>
          <View />
        </View>,
      ],
      "onLayout": [Function],
      "style": 68,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 41 - 41 of 41 results
          </Text>,
          "style": Array [
            69,
            71,
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "Showing 41 - 41 of 41 results",
            "style": Array [
              70,
            ],
          },
          "ref": null,
          "rendered": "Showing 41 - 41 of 41 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                &lt; Previous page
              </TextLink>
            </View>,
            <View />,
          ],
          "style": Array [
            69,
            67,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                &lt; Previous page
              </TextLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": "< Previous page",
                "onPress": [Function],
                "style": 66,
                "url": "./2",
              },
              "ref": null,
              "rendered": "< Previous page",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                69,
                71,
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 41 - 41 of 41 results
            </Text>
          </View>,
          <View
            style={
              Array [
                69,
                67,
              ]
            }
          >
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                &lt; Previous page
              </TextLink>
            </View>
            <View />
          </View>,
        ],
        "onLayout": [Function],
        "style": 68,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 41 - 41 of 41 results
            </Text>,
            "style": Array [
              69,
              71,
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Showing 41 - 41 of 41 results",
              "style": Array [
                70,
              ],
            },
            "ref": null,
            "rendered": "Showing 41 - 41 of 41 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View>
                <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  &lt; Previous page
                </TextLink>
              </View>,
              <View />,
            ],
            "style": Array [
              69,
              67,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  &lt; Previous page
                </TextLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": "< Previous page",
                  "onPress": [Function],
                  "style": 66,
                  "url": "./2",
                },
                "ref": null,
                "rendered": "< Previous page",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Web renders prev link 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={41}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={1}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              69,
              71,
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 1 - 20 of 41 results
          </Text>
        </View>,
        <View
          style={
            Array [
              69,
              67,
            ]
          }
        >
          <View />
          <View>
            <TextLink
              onPress={[Function]}
              style={66}
              url="./2"
            >
              Next page &gt;
            </TextLink>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": 68,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            style={
              Array [
                70,
              ]
            }
          >
            Showing 1 - 20 of 41 results
          </Text>,
          "style": Array [
            69,
            71,
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "Showing 1 - 20 of 41 results",
            "style": Array [
              70,
            ],
          },
          "ref": null,
          "rendered": "Showing 1 - 20 of 41 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View />,
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>
            </View>,
          ],
          "style": Array [
            69,
            67,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": "Next page >",
                "onPress": [Function],
                "style": 66,
                "url": "./2",
              },
              "ref": null,
              "rendered": "Next page >",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                69,
                71,
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 1 - 20 of 41 results
            </Text>
          </View>,
          <View
            style={
              Array [
                69,
                67,
              ]
            }
          >
            <View />
            <View>
              <TextLink
                onPress={[Function]}
                style={66}
                url="./2"
              >
                Next page &gt;
              </TextLink>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": 68,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Array [
                  70,
                ]
              }
            >
              Showing 1 - 20 of 41 results
            </Text>,
            "style": Array [
              69,
              71,
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Showing 1 - 20 of 41 results",
              "style": Array [
                70,
              ],
            },
            "ref": null,
            "rendered": "Showing 1 - 20 of 41 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View />,
              <View>
                <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  Next page &gt;
                </TextLink>
              </View>,
            ],
            "style": Array [
              69,
              67,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": <TextLink
                  onPress={[Function]}
                  style={66}
                  url="./2"
                >
                  Next page &gt;
                </TextLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": "Next page >",
                  "onPress": [Function],
                  "style": 66,
                  "url": "./2",
                },
                "ref": null,
                "rendered": "Next page >",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
